--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 Various common problems solved in python.
 -----------------------------------------
+TODO: need to write 1 line description of all files in the below format, here is a start.
 
 custom-dictionary-sort - Sort the input character array based on the dictionary given.
 
