--- a/README
+++ b/README
@@ -1,8 +1,11 @@
 Various common problems solved in python.
 -----------------------------------------
 
-custom-dictionary-sort - Sort the input character array based on the dictionary given.
+- custom-dictionary-sort - Sort the input character array based on the dictionary given.
 
-repeated-elements - Finding a maximum of k-1 most repeated elements, repeated n/k times from a set n. Run time O(n) and space complexity O(k)
+- repeated-elements - Finding a maximum of k-1 most repeated elements, repeated n/k times from a set n. Run time O(n) and space complexity O(k).
 
+- hr-two-arrays - https://www.hackerrank.com/challenges/two-arrays
+You are given two integer arrays, A and B, each containing N integers. The size of the array is <= 1000. You are free to permute the order of the elements in the arrays.
 
+Now for the real question - is there an arrangement of the arrays such that Ai+Bi>=K for all i where Ai denotes the ith element in the array A.
